constraintflow/constraintflow/dslParser.py
# Generated from dsl.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class dslParser ( Parser ):

    grammarFileName = "dsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'minimize'", "'maximize'", "'flow'", 
                     "'->'", "'transformer'", "'In'", "'out'", "'backward'", 
                     "'forward'", "'Int'", "'Float'", "'Bool'", "'PolyExp'", 
                     "'SymExp'", "'Neuron'", "'Noise'", "'Ct'", "'List'", 
                     "'.'", "','", "'+'", "'-'", "'*'", "'/'", "'and'", 
                     "'or'", "'<'", "'='", "'=='", "'!='", "'>'", "'<='", 
                     "'>='", "'!'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "'?'", "':'", "'if'", "'traverse'", "'sum'", 
                     "'len'", "'avg'", "'sub'", "'map'", "'map_list'", "'dot'", 
                     "'argmin'", "'argmax'", "'min'", "'max'", "'weight'", 
                     "'bias'", "'layer'", "'Affine'", "'Relu'", "'Relu6'", 
                     "'Abs'", "'HardTanh'", "'HardSigmoid'", "'HardSwish'", 
                     "'Maxpool'", "'Minpool'", "'Avgpool'", "'rev_Affine'", 
                     "'Neuron_mult'", "'Neuron_add'", "'Neuron_max'", "'Neuron_min'", 
                     "'Neuron_list_mult'", "'rev_Relu'", "'rev_Relu6'", 
                     "'rev_Abs'", "'rev_HardSigmoid'", "'rev_HardTanh'", 
                     "'rev_HardSwish'", "'rev_Maxpool'", "'rev_Neuron_mult'", 
                     "'rev_Neuron_add'", "'rev_Neuron_max'", "'rev_Neuron_min'", 
                     "'Sigmoid'", "'Tanh'", "'def Shape as'", "'func'", 
                     "'eps'", "'true'", "'false'", "'curr'", "'prev'", "'prev_0'", 
                     "'prev_1'", "'curr_list'", "'lp'", "'concat'", "'equations'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "FLOW", "ARROW", 
                      "TRANSFORMER", "IN", "OUT", "BACKWARD", "FORWARD", 
                      "INTT", "FLOATT", "BOOL", "POLYEXP", "ZONOEXP", "NEURON", 
                      "NOISE", "CT", "LIST", "DOT", "COMMA", "PLUS", "MINUS", 
                      "MULT", "DIV", "AND", "OR", "LT", "EQ", "EQQ", "NEQ", 
                      "GT", "LEQ", "GEQ", "NOT", "LPAREN", "RPAREN", "LSQR", 
                      "RSQR", "LBRACE", "RBRACE", "SEMI", "QUES", "COLON", 
                      "IF", "TRAV", "SUM", "LEN", "AVG", "SUB", "MAP", "MAPLIST", 
                      "DOTT", "ARGMIN", "ARGMAX", "MIN", "MAX", "WEIGHT", 
                      "BIAS", "LAYER", "AFFINE", "RELU", "RELU6", "ABS", 
                      "HARDTANH", "HARDSIGMOID", "HARDSWISH", "MAXPOOL", 
                      "MINPOOL", "AVGPOOL", "REVAFFINE", "NEURON_MULT", 
                      "NEURON_ADD", "NEURON_MAX", "NEURON_MIN", "NEURON_LIST_MULT", 
                      "REVRELU", "REVRELU6", "REVABS", "REVHARDSIGMOID", 
                      "REVHARDTANH", "REVHARDSWISH", "REVMAXPOOL", "REVNEURON_MULT", 
                      "REVNEURON_ADD", "REVNEURON_MAX", "REVNEURON_MIN", 
                      "SIGMOID", "TANH", "SHAPE", "FUNC", "EPSILON", "TRUE", 
                      "FALSE", "CURR", "PREV", "PREV_0", "PREV_1", "CURRLIST", 
                      "LP", "CONCAT", "EQUATIONS", "IntConst", "FloatConst", 
                      "VAR", "WS", "LineComment" ]

    RULE_prog = 0
    RULE_shape_decl = 1
    RULE_statement = 2
    RULE_func_decl = 3
    RULE_transformer = 4
    RULE_op_list = 5
    RULE_op_stmt = 6
    RULE_trans_decl = 7
    RULE_operator = 8
    RULE_trans_ret = 9
    RULE_types = 10
    RULE_arglist = 11
    RULE_expr_list = 12
    RULE_exprs = 13
    RULE_expr = 14
    RULE_argmax_op = 15
    RULE_lp_op = 16
    RULE_max_op = 17
    RULE_list_op = 18
    RULE_binop = 19
    RULE_metadata = 20
    RULE_direction = 21

    ruleNames =  [ "prog", "shape_decl", "statement", "func_decl", "transformer", 
                   "op_list", "op_stmt", "trans_decl", "operator", "trans_ret", 
                   "types", "arglist", "expr_list", "exprs", "expr", "argmax_op", 
                   "lp_op", "max_op", "list_op", "binop", "metadata", "direction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    FLOW=3
    ARROW=4
    TRANSFORMER=5
    IN=6
    OUT=7
    BACKWARD=8
    FORWARD=9
    INTT=10
    FLOATT=11
    BOOL=12
    POLYEXP=13
    ZONOEXP=14
    NEURON=15
    NOISE=16
    CT=17
    LIST=18
    DOT=19
    COMMA=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    AND=25
    OR=26
    LT=27
    EQ=28
    EQQ=29
    NEQ=30
    GT=31
    LEQ=32
    GEQ=33
    NOT=34
    LPAREN=35
    RPAREN=36
    LSQR=37
    RSQR=38
    LBRACE=39
    RBRACE=40
    SEMI=41
    QUES=42
    COLON=43
    IF=44
    TRAV=45
    SUM=46
    LEN=47
    AVG=48
    SUB=49
    MAP=50
    MAPLIST=51
    DOTT=52
    ARGMIN=53
    ARGMAX=54
    MIN=55
    MAX=56
    WEIGHT=57
    BIAS=58
    LAYER=59
    AFFINE=60
    RELU=61
    RELU6=62
    ABS=63
    HARDTANH=64
    HARDSIGMOID=65
    HARDSWISH=66
    MAXPOOL=67
    MINPOOL=68
    AVGPOOL=69
    REVAFFINE=70
    NEURON_MULT=71
    NEURON_ADD=72
    NEURON_MAX=73
    NEURON_MIN=74
    NEURON_LIST_MULT=75
    REVRELU=76
    REVRELU6=77
    REVABS=78
    REVHARDSIGMOID=79
    REVHARDTANH=80
    REVHARDSWISH=81
    REVMAXPOOL=82
    REVNEURON_MULT=83
    REVNEURON_ADD=84
    REVNEURON_MAX=85
    REVNEURON_MIN=86
    SIGMOID=87
    TANH=88
    SHAPE=89
    FUNC=90
    EPSILON=91
    TRUE=92
    FALSE=93
    CURR=94
    PREV=95
    PREV_0=96
    PREV_1=97
    CURRLIST=98
    LP=99
    CONCAT=100
    EQUATIONS=101
    IntConst=102
    FloatConst=103
    VAR=104
    WS=105
    LineComment=106

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shape_decl(self):
            return self.getTypedRuleContext(dslParser.Shape_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(dslParser.StatementContext,0)


        def EOF(self):
            return self.getToken(dslParser.EOF, 0)

        def getRuleIndex(self):
            return dslParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = dslParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.shape_decl()
            self.state = 45
            self.statement(0)
            self.state = 46
            self.match(dslParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Shape_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHAPE(self):
            return self.getToken(dslParser.SHAPE, 0)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(dslParser.ArglistContext,0)


        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(dslParser.LBRACE, 0)

        def expr(self):
            return self.getTypedRuleContext(dslParser.ExprContext,0)


        def RBRACE(self):
            return self.getToken(dslParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def getRuleIndex(self):
            return dslParser.RULE_shape_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape_decl" ):
                listener.enterShape_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape_decl" ):
                listener.exitShape_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape_decl" ):
                return visitor.visitShape_decl(self)
            else:
                return visitor.visitChildren(self)




    def shape_decl(self):

        localctx = dslParser.Shape_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_shape_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(dslParser.SHAPE)
            self.state = 49
            self.match(dslParser.LPAREN)
            self.state = 50
            self.arglist()
            self.state = 51
            self.match(dslParser.RPAREN)
            self.state = 52
            self.match(dslParser.LBRACE)
            self.state = 53
            self.expr(0)
            self.state = 54
            self.match(dslParser.RBRACE)
            self.state = 55
            self.match(dslParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dslParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FlowstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOW(self):
            return self.getToken(dslParser.FLOW, 0)
        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)
        def direction(self):
            return self.getTypedRuleContext(dslParser.DirectionContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(dslParser.COMMA)
            else:
                return self.getToken(dslParser.COMMA, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.ExprContext)
            else:
                return self.getTypedRuleContext(dslParser.ExprContext,i)

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)
        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlowstmt" ):
                listener.enterFlowstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlowstmt" ):
                listener.exitFlowstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlowstmt" ):
                return visitor.visitFlowstmt(self)
            else:
                return visitor.visitChildren(self)


    class FuncstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(dslParser.FUNC, 0)
        def func_decl(self):
            return self.getTypedRuleContext(dslParser.Func_declContext,0)

        def EQ(self):
            return self.getToken(dslParser.EQ, 0)
        def expr(self):
            return self.getTypedRuleContext(dslParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncstmt" ):
                listener.enterFuncstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncstmt" ):
                listener.exitFuncstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncstmt" ):
                return visitor.visitFuncstmt(self)
            else:
                return visitor.visitChildren(self)


    class SeqstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dslParser.StatementContext)
            else:
                return self.getTypedRuleContext(dslParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeqstmt" ):
                listener.enterSeqstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeqstmt" ):
                listener.exitSeqstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeqstmt" ):
                return visitor.visitSeqstmt(self)
            else:
                return visitor.visitChildren(self)


    class TransstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dslParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def transformer(self):
            return self.getTypedRuleContext(dslParser.TransformerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransstmt" ):
                listener.enterTransstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransstmt" ):
                listener.exitTransstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransstmt" ):
                return visitor.visitTransstmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = dslParser.StatementContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_statement, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dslParser.FLOW]:
                localctx = dslParser.FlowstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 58
                self.match(dslParser.FLOW)
                self.state = 59
                self.match(dslParser.LPAREN)
                self.state = 60
                self.direction()
                self.state = 61
                self.match(dslParser.COMMA)
                self.state = 62
                self.expr(0)
                self.state = 63
                self.match(dslParser.COMMA)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(dslParser.COMMA)
                self.state = 66
                self.match(dslParser.VAR)
                self.state = 67
                self.match(dslParser.RPAREN)
                self.state = 68
                self.match(dslParser.SEMI)
                pass
            elif token in [dslParser.FUNC]:
                localctx = dslParser.FuncstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.match(dslParser.FUNC)
                self.state = 71
                self.func_decl()
                self.state = 72
                self.match(dslParser.EQ)
                self.state = 73
                self.expr(0)
                self.state = 74
                self.match(dslParser.SEMI)
                pass
            elif token in [dslParser.TRANSFORMER]:
                localctx = dslParser.TransstmtContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 76
                self.transformer()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = dslParser.SeqstmtContext(self, dslParser.StatementContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statement)
                    self.state = 79
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 80
                    self.statement(2) 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)

        def LPAREN(self):
            return self.getToken(dslParser.LPAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(dslParser.ArglistContext,0)


        def RPAREN(self):
            return self.getToken(dslParser.RPAREN, 0)

        def getRuleIndex(self):
            return dslParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = dslParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(dslParser.VAR)
            self.state = 87
            self.match(dslParser.LPAREN)
            self.state = 88
            self.arglist()
            self.state = 89
            self.match(dslParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransformerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trans_decl(self):
            return self.getTypedRuleContext(dslParser.Trans_declContext,0)


        def LBRACE(self):
            return self.getToken(dslParser.LBRACE, 0)

        def op_list(self):
            return self.getTypedRuleContext(dslParser.Op_listContext,0)


        def RBRACE(self):
            return self.getToken(dslParser.RBRACE, 0)

        def getRuleIndex(self):
            return dslParser.RULE_transformer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransformer" ):
                listener.enterTransformer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransformer" ):
                listener.exitTransformer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransformer" ):
                return visitor.visitTransformer(self)
            else:
                return visitor.visitChildren(self)




    def transformer(self):

        localctx = dslParser.TransformerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_transformer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.trans_decl()
            self.state = 92
            self.match(dslParser.LBRACE)
            self.state = 93
            self.op_list()
            self.state = 94
            self.match(dslParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Op_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op_stmt(self):
            return self.getTypedRuleContext(dslParser.Op_stmtContext,0)


        def SEMI(self):
            return self.getToken(dslParser.SEMI, 0)

        def op_list(self):
            return self.getTypedRuleContext(dslParser.Op_listContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_op_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_list" ):
                listener.enterOp_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_list" ):
                listener.exitOp_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_list" ):
                return visitor.visitOp_list(self)
            else:
                return visitor.visitChildren(self)




    def op_list(self):

        localctx = dslParser.Op_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op_list)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.op_stmt()
                self.state = 97
                self.match(dslParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.op_stmt()
                self.state = 100
                self.match(dslParser.SEMI)
                self.state = 101
                self.op_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Op_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(dslParser.OperatorContext,0)


        def ARROW(self):
            return self.getToken(dslParser.ARROW, 0)

        def trans_ret(self):
            return self.getTypedRuleContext(dslParser.Trans_retContext,0)


        def getRuleIndex(self):
            return dslParser.RULE_op_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_stmt" ):
                listener.enterOp_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_stmt" ):
                listener.exitOp_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_stmt" ):
                return visitor.visitOp_stmt(self)
            else:
                return visitor.visitChildren(self)




    def op_stmt(self):

        localctx = dslParser.Op_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_op_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.operator()
            self.state = 106
            self.match(dslParser.ARROW)
            self.state = 107
            self.trans_ret()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Trans_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSFORMER(self):
            return self.getToken(dslParser.TRANSFORMER, 0)

        def VAR(self):
            return self.getToken(dslParser.VAR, 0)

        def getRuleIndex(self):
            return dslParser.RULE_trans_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrans_decl" ):
                listener.enterTrans_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrans_decl" ):
                listener.exitTrans_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrans_decl" ):
                return visitor.visitTrans_decl(self)
            else:
                return visitor.visitChildren(self)




    def trans_decl(self):
